# darkwebguard

./: .env  .env.example  .gitignore  Dockerfile.backend  Dockerfile.crawler  Dockerfile.frontend  README.md  darkwebguard.db  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
backend/app/: main.py  requirements.txt
backend/app/api/: admin.py  alerts.py  brands.py  users.py
backend/app/db/: models.py  session.py
backend/app/models/: alert.py  brand.py  token.py  users.py
backend/app/services/: risk_score.py  scan_engine.py
backend/tests/unit/: test_scan_engine.py
deploy/: nginx.conf
docs/: DEPLOYMENT.md  PRODUCTION-CHECKLIST.md  SECURITY.md
public/: index.html
scanner/: scheduler.py
scanner/forum_crawlers/: breached_db.py  darkreddit_scraper.py  onion_forum.py
scripts/: dev-server.sh  setup-production.sh
src/: App.css  App.tsx  index.js
src/components/: AlertCard.tsx  Dashboard.tsx
src/pages/: AdminView.tsx  Home.tsx  Login.tsx  Register.tsx  Settings.tsx
src/services/: api.ts
test_env/: pyvenv.cfg
